fixed smaller screen overflow

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,5 +1,7 @@
 html, body {
-  height: 100%;
+  height: auto;
+  max-width: 100%;
+  overflow-x: hidden;
 }
 
 
@@ -50,10 +52,11 @@ html, body {
   justify-content: center;
 }
 
-.contact-container {
+.contact-content {
   margin-top: auto;
   margin-bottom: auto;
 }
+
 
 .modal-backdrop.show {
   opacity: 0.95;
@@ -94,18 +97,83 @@ a.btn-outline-black.btn.Ripple-parent.modal-link.btn-md {
 }
 
 
-@media only screen and (min-width: 768px) {
-
-  .modal.fade.top.show {
-      padding-top: 2rem; 
+@media only screen and (min-width: 320px) {
+  .portfolio-page {
+     padding: 2rem 0 2rem 0;
   }
+
+  .about-page {
+    padding: 1rem 0 1rem 0;
+  }
+
+  .contact-content {
+    padding: 0 1rem 0 1rem;
+  }
+
+  .contact-container {
+    padding: 2rem 0 2rem 0;
+  }
+
+  body.modal-open {
+    overflow: auto;
+    width: 96%;
+  }     
+}
+
+@media only screen and (min-width: 600px) {
+  .portfolio-page {
+    padding: 1rem 0 1rem 0;
+ }
+
+ .about-page {
+   padding: 0;
+ }
+
+ .contact-content {
+   padding: 0;
+ }
+
+ .contact-container {
+   padding: 1rem 0 1rem 0;
+ }
+
+body.modal-open {
+  width: 100%;
+}
+   
+}
+
+
+
+@media only screen and (min-width: 768px) {
+  .portfolio-page {
+    padding: 0;
+  }
+
+  .contact-page {
+    padding: 0;
+  }
+     
+  .modal.fade.top.show {
+    padding-top: 2rem; 
+ }
 
 }
 
-@media only screen and (min-width: 992px) {
+@media only screen 
+and (min-width : 768px) 
+and (max-width : 1024px) 
+and (orientation : portrait) { 
 
+   
+
+}
+
+
+
+@media only screen and (min-width: 992px) {
   .landing-container {
-      display: block;
+    display: block;
   }
 
 } 
