--- a/client/src/components/Form/style.css
+++ b/client/src/components/Form/style.css
@@ -32,6 +32,6 @@
 }
 
 button.btn.btn-outline-default.Ripple-parent.send-button {
-    margin-top: 3rem;
+    margin: 1.5rem 0 0 0;
 }
 
