--- a/client/src/components/ModalList/style.css
+++ b/client/src/components/ModalList/style.css
@@ -30,3 +30,15 @@ ul {
   }
 
 
+  @media only screen and (min-width: 992px) {
+
+    ul {
+        align-content: space-between;
+
+    }
+
+    ul li::before {
+        width: 1.25em;
+    }
+  
+  } 
