--- a/client/src/components/NavBar/style.css
+++ b/client/src/components/NavBar/style.css
@@ -1,3 +1,4 @@
+
 .nav-bg-1 {
     background-color: black;
     border-bottom: 1px solid hsl(0, 0%, 45%);
@@ -36,6 +37,10 @@
  
  
  @media only screen and (max-width: 600px) {
+
+    .navbar {
+        padding: 0 !important 
+    }
  
     .d-sm-inline-flex.ml-sm-auto.navbar-nav {
         width: 100%
@@ -82,7 +87,7 @@
     }
  
    .nav-item {
-       padding: 0 1rem;
+       padding: 0 1rem 0 0 ;
    }
    
  } 
